# stream-deck-plugin-template

./: .gitignore  .gitmodules  Cargo.toml  Justfile  LICENSE  NOTES.md  README.md
local.change-me.template.sdPlugin/: manifest.json
local.change-me.template.sdPlugin/actions/: button_property_inspector.html  button_property_inspector.js
src/: lib.rs  logger.rs  main.rs  plugin.rs
