[package]
name = "stream-deck-plugin-template"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
directories = "5.0.1"

stream-deck-plugin = { path = "../stream-deck-plugin" }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
